task & time classes fixups

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@ project(projekt2)
 
 set(CMAKE_CXX_STANDARD 17)
 
+find_package(Threads REQUIRED)
+
 add_executable(projekt2 main.cpp client.cpp client.hpp server.cpp server.hpp query.hpp interpreter.cpp interpreter.hpp invalid_args_exception.hpp scheduler.cpp scheduler.hpp task.cpp task.hpp time.cpp time.hpp utils.cpp utils.hpp logger.cpp logger.hpp)
+target_link_libraries(projekt2 ${CMAKE_THREAD_LIBS_INIT} rt)
